--- a/.env.live
+++ b/.env.live
@@ -13,7 +13,13 @@ REDIS_HOST=ozys-component.qiciu7.0001.apn2.cache.amazonaws.com
 REDIS_PORT=6379
 
 # BLOCK  
+BLOCK_RPC_USING=true
 BLOCK_RPC=http://api.baobab.ozys.net:8551
+
+# KAS 
+KAS_NETWORK=8217
+KAS_KEY1=
+KAS_KEY2=
 
 # ETH
 ETH_BLOCK_RPC=http://eth.node.orbitchain.kr:8545
@@ -23,24 +29,6 @@ ETH_BLOCK_SOCKET=ws://eth.node.orbitchain.kr:8546
 API_PORT=8080
 ADMIN_PORT=8081
 
-# Web Socket
-SYNC_SOCKET_PORT=3500
-WORKER_SOCKET_PORT=3501 
-
-# JWT
-JWT_SECRET =solex.test.foe#5a-s@uce
-JWT_ALGO='RS256'
-
-# KAS 
-KAS_NETWORK=1001
-KAS_KEY1=KASK93HV9TUAGLJR99P1Y03G
-KAS_KEY2=EpCf7NDML0UASJ5GbtBHAlSM8DnCVPyEMyyN03lY
 
 # COIN_MARKET_CAP
 CMC_KEY=22ec02fc-5cf8-4920-8e5f-f94dbbcf9d2d
-
-# INFURA
-INFURA_HTTP_PROVIDER=https://ropsten.infura.io/v3/e6f57ed505ce49f286e221ea770b4178/
-INFURA_WSS_PROVIDER=wss://ropsten.infura.io/ws/v3/e6f57ed505ce49f286e221ea770b4178/
-INFURA_PROJECT_ID=e6f57ed505ce49f286e221ea770b4178
-INFURA_PROJECT_SECRET=8b9570229dd746339157e89128f8a547
